--- a/less/main.less
+++ b/less/main.less
@@ -4,6 +4,14 @@ body{
     font-family: monospace;
 }
 
+
+.body{
+    max-width:60%;
+    margin:0 auto;
+    left:auto;
+    right:auto;
+}
+
 ul.list-inline{
   list-style: none;
   margin-left:-40px;
@@ -30,9 +38,17 @@ li{
 
 
 nav{
+    padding:20px 0;
+    background-color:#f9f9f9;
+    text-align: center;
     a{
         text-decoration: none;
         color:blue;
+        opacity: 0.5;
+
+        &.active{
+            opacity:1;
+        }
     }
 }
 
